force-app/main/default/objects/TPM_Pricing__c/TPM_Pricing__c.object-meta.xml
<CustomObject>
    <label>TPM Pricing</label>
    <nameField>
        <label>Product Name (TPM)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TPM Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>