force-app/main/default/objects/TPM_Pricing__c/fields/Buy_End_Range__c.field-meta.xml
<CustomField>
    <fullName>Buy_End_Range__c</fullName>
    <label>Buy End Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>