force-app/main/default/objects/TPM_Pricing__c/fields/Price_Per_Million__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Million__c</fullName>
    <label>Price Per Million</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>